--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 body{
-    background-color: rgb(212, 246, 255);
+    background-color: rgb(200, 215, 255);
     font-family: 'Trebuchet MS';
     margin:0;
 }
 
 .outer{
-    border-top: 10px solid rgb(0, 0, 0);
-    background-color: rgb(26, 26, 26);
+    border-top: 5px solid rgb(37, 37, 37);
+    background-color: rgb(58, 58, 58);
     float:left;
     width: 100%;
-    box-shadow: 0px 2px 6px 3px rgba(0, 0, 0, 0.637);
+    box-shadow: 0px 2px 5px 1px rgb(0, 0, 0);
 }
 
 .logo{
@@ -31,20 +31,20 @@ ul li{
     Width:73%;
     float:Right;
     padding-left: 10px;
+    margin-right: 10px;
 }
 .button{
     padding: 10px;
     text-decoration: none;
     margin-left: 10px;
-    font-weight:bold;
-    color: rgb(77, 202, 224);
+    color: rgb(185, 185, 185);
 }
 
 .button:hover{
-    border-radius: 10px;
-    background-color: rgba(0, 195, 255, 0.205);
+    color: rgb(219, 219, 219);
 }
 
 .current{
-    color: rgb(255, 29, 29);
+    color: rgb(255, 255, 255);
+    border-bottom: 2px Solid rgb(255, 255, 255);
 }
