--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body{
     background-color: rgb(200, 215, 255);
     font-family: 'Trebuchet MS';
-    margin:0;
+    margin: 0px;
 }
 
 .outer{
-    border-top: 5px solid rgb(37, 37, 37);
     background-color: rgb(58, 58, 58);
+    background-image: linear-gradient(180deg, rgb(61, 61, 61) 0%, rgb(32, 32, 32) 70%, rgb(0, 0, 0) 95%);
     float:left;
     width: 100%;
     box-shadow: 0px 2px 5px 1px rgb(0, 0, 0);
