--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: rgb(200, 215, 255);
     font-family: 'Trebuchet MS';
@@ -6,7 +9,7 @@ body{
 
 .outer{
     background-color: rgb(58, 58, 58);
-    background-image: linear-gradient(180deg, rgb(61, 61, 61) 0%, rgb(32, 32, 32) 70%, rgb(0, 0, 0) 95%);
+    background-image: linear-gradient(180deg, rgb(61, 61, 61) 0%, rgb(34, 34, 34) 70%, rgb(22, 22, 22) 95%);
     float:left;
     width: 100%;
     box-shadow: 0px 2px 5px 1px rgb(0, 0, 0);
