--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,35 @@
 html{
     scroll-behavior: smooth;
 }
+
 body{
-    background-color: rgb(200, 215, 255);
+    background-color: rgb(15, 15, 15);
     font-family: 'Trebuchet MS';
     margin: 0px;
+    color: rgb(219, 219, 219);
+}
+
+.Top{
+    position: fixed;
+    height: 40px;
+    width:50px;
+    border-radius: 50px;
+    background-color: rgb(255, 255, 255);
+    bottom: 30px;
+    right: 30px;
+    z-index: 1000;
+    opacity: 75%;
+    padding-top: 6px;
+    text-align: center;
+}
+
+.topIcon{
+    color: rgb(0, 0, 0);
 }
 
 .outer{
     background-color: rgb(58, 58, 58);
-    background-image: linear-gradient(180deg, rgb(61, 61, 61) 0%, rgb(34, 34, 34) 70%, rgb(22, 22, 22) 95%);
+    
     float:left;
     width: 100%;
     box-shadow: 0px 2px 5px 1px rgb(0, 0, 0);
@@ -54,5 +74,67 @@ ul li{
 
 .Slider{
     width:100%;
-    height:540px;
+    height:580px;
+}
+
+.container{
+    width: 100%;
+}
+.container .Link{
+    padding:10px;
+    padding-bottom: 15px;
+    background-color: rgba(255, 255, 255, 0.158);
+    margin-left: 10px;
+    margin-bottom: 10px;
+    width:280px;
+    word-wrap:break-word;
+    border-radius: 10px;
+    display: inline-block;
+}
+
+.Link .img{
+    margin:0;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.459);
+}
+
+.heading{
+    padding: 10px;
+    text-align:center;
+    background-image: linear-gradient(0deg, rgb(34, 34, 34) 0%, rgb(27, 27, 27) 30%, rgb(22, 22, 22) 95%);
+}
+
+button{
+    padding:10px;
+    padding-left:20px;
+    padding-right:20px;
+    border:none;
+    color:rgb(223, 223, 223);
+    background-image: linear-gradient(180deg, rgb(34, 34, 34) 0%, rgb(27, 27, 27) 30%, rgb(22, 22, 22) 95%);
+}
+
+button:hover{
+    background-image: linear-gradient(180deg, rgb(43, 43, 43) 0%, rgb(35, 35, 35) 30%, rgb(30, 30, 30) 95%);
+    
+}
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.container .Service{
+    padding:10px;
+    background-color: rgba(255, 255, 255, 0.158);
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    display: inline-block;
+}
+.Service h3{
+    padding:10px;;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.459);
+    color: rgb(219, 219, 219);
 }
