--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body{
 
 .outer{
     background-color: rgb(58, 58, 58);
-    
+    background-image: linear-gradient(180deg, rgb(46, 46, 46) 0%, rgb(22, 22, 22) 70%, rgb(14, 14, 14) 95%);
     float:left;
     width: 100%;
     box-shadow: 0px 2px 5px 1px rgb(0, 0, 0);
@@ -86,7 +86,7 @@ ul li{
     background-color: rgba(255, 255, 255, 0.158);
     margin-left: 10px;
     margin-bottom: 10px;
-    width:280px;
+    width:270px;
     word-wrap:break-word;
     border-radius: 10px;
     display: inline-block;
@@ -113,6 +113,17 @@ button{
     background-image: linear-gradient(180deg, rgb(34, 34, 34) 0%, rgb(27, 27, 27) 30%, rgb(22, 22, 22) 95%);
 }
 
+.SingleLine .button{
+    float: right;
+    border-radius: 30px;
+    padding:10px;
+    padding-left:30px;
+    padding-right:30px;
+    border:none;
+    color:rgb(223, 223, 223);
+    background-image: linear-gradient(180deg, rgb(34, 34, 34) 0%, rgb(27, 27, 27) 30%, rgb(22, 22, 22) 95%);
+}
+
 button:hover{
     background-image: linear-gradient(180deg, rgb(43, 43, 43) 0%, rgb(35, 35, 35) 30%, rgb(30, 30, 30) 95%);
     
@@ -133,8 +144,12 @@ button:hover{
     display: inline-block;
 }
 .Service h3{
-    padding:10px;;
+    padding:10px;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.459);
     color: rgb(219, 219, 219);
+}
+
+.SingleLine{
+    padding: 15px;
 }
