--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,11 @@ html{
 }
 
 body{
-    background-color: rgb(15, 15, 15);
+    background-color: rgb(26, 26, 26);
     font-family: 'Trebuchet MS';
     margin: 0px;
     color: rgb(219, 219, 219);
 }
-
 .Top{
     position: fixed;
     height: 40px;
@@ -23,7 +22,7 @@ body{
     text-align: center;
 }
 
-.topIcon{
+.Top i{
     color: rgb(0, 0, 0);
 }
 
@@ -85,7 +84,7 @@ ul li{
     padding-bottom: 15px;
     background-color: rgba(255, 255, 255, 0.158);
     margin-left: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     width:270px;
     word-wrap:break-word;
     border-radius: 10px;
@@ -112,11 +111,15 @@ button{
     color:rgb(223, 223, 223);
     background-image: linear-gradient(180deg, rgb(34, 34, 34) 0%, rgb(27, 27, 27) 30%, rgb(22, 22, 22) 95%);
 }
-
+.SingleLine{
+    background-color: rgba(255, 255, 255, 0.158);
+    margin: 4px;
+    border-radius: 10px;
+}
 .SingleLine .button{
     float: right;
     border-radius: 30px;
-    padding:10px;
+    margin-top: 10px;;
     padding-left:30px;
     padding-right:30px;
     border:none;
@@ -126,7 +129,6 @@ button{
 
 button:hover{
     background-image: linear-gradient(180deg, rgb(43, 43, 43) 0%, rgb(35, 35, 35) 30%, rgb(30, 30, 30) 95%);
-    
 }
 .center{
     display: block;
@@ -152,4 +154,70 @@ button:hover{
 
 .SingleLine{
     padding: 15px;
+}
+
+/*Contact Box CSS*/
+
+#contact {
+    width: 50%;
+    border-radius: 5px;
+    background-color:  rgba(255, 255, 255, 0.158);
+    padding: 20px;
+    padding-bottom: 8px;
+    box-shadow: 4px 4px 10px 3px black;
+    margin-bottom: 20px;
+}
+
+input[type=text], textarea {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 4px;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical ;
+    background-color: rgba(0, 0, 0, 0.459);
+    color: white;
+}
+
+input[type=submit] {
+    background-color: #242724;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #161b17;
+}
+
+
+footer{
+    background-image:linear-gradient(180deg, rgb(43, 43, 43) 0%, rgb(35, 35, 35) 30%, rgb(30, 30, 30) 95%);
+}
+
+footer p{
+    width: 100%;
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+footer p a:hover{
+    color: rgb(163, 163, 163);
+}
+
+footer .icons a i{
+    text-align: center;
+    margin-left: 10px;
+    color: white;
+}
+
+footer .icons a i:hover{
+    color: rgb(134, 134, 134);
+}
+
+footer .emailLink{
+    padding-top: 10px;;
 }
