Added Font Support

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html{
 
 body{
     background-color: rgb(26, 26, 26);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0px;
     color: rgb(219, 219, 219);
 }
