--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ button:hover {
 .center {
   margin-left: auto;
   margin-right: auto;
-  display:block;
+  display: block;
   width: 50%;
 }
 
@@ -252,7 +252,6 @@ footer .emailLink {
   padding-top: 10px;
 }
 
-
 /*Responsive Services Bar Styling*/
 
 .row {
@@ -283,5 +282,39 @@ footer .emailLink {
   .column {
     flex: 100%;
     max-width: 100%;
+  }
+}
+
+/* Top Navbar Dropdown for mobile screens */
+#dropbutton {
+  display: none;
+}
+@media (max-width: 600px) {
+  .dropdown-content ul li {
+    padding: 12px 16px;
+    text-align: center;
+  }
+  .dropdown-content ul {
+    flex-direction: column;
+    float: left;
+  }
+  .dropdown {
+    border: none;
+    outline: none;
+    margin: 0;
+  }
+  .dropbtn {
+    float: right;
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+  #dropbutton {
+    display: inline;
+  }
+  .dropdown-content {
+    display: none;
+  }
+  .show {
+    display: block;
   }
 }
